# repo-utils

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  lib.rs  repo_project_selector.rs  utils.rs
src/assets/: style.toml
src/repo_history/: diff_view.rs  main_view.rs  mod.rs  model.rs  ui.rs
src/ui_common/: list_view.rs  mod.rs  seperator_view.rs  styles.rs  table_view.rs
tests/: repo_project_selector_test.rs
tests/data/repo_project_selector/.repo/: manifest.xml  project.list
tests/data/repo_project_selector/.repo/manifests/: libs.xml
