[package]
name = "repo-utils"
version = "0.4.1"
authors = ["Florian Bramer <elektronenhirn@gmail.com>"]
edition = "2018"
description="Utilities for google's repo-tool"
license="MIT"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
app_dirs = "2.0"
chrono = "0.4"
clap = {version = "4.5", features = ["cargo", "derive"] }
colored = "2"
crossbeam = "0.8"
cursive = "0.21"
dialoguer = "0.11"
git2 = "0.19"
indicatif = { version = "0.17", features = ["rayon"] }
num_cpus = "1.16"
rayon = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.6"
toml = "0.8"
