[package]
name = "repo-utils"
version = "0.4.1"
authors = ["Florian Bramer <elektronenhirn@gmail.com>"]
edition = "2018"
description="Utilities for google's repo-tool"
license="MIT"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
app_dirs = "2.0"
chrono = "0.4.41"
clap = {version = "4.5.46", features = ["cargo", "derive"] }
colored = "3.0.0"
crossbeam = "0.8.4"
cursive = "0.21.1"
dialoguer = "0.12.0"
git2 = "0.20.2"
indicatif = { version = "0.18.0", features = ["rayon"] }
num_cpus = "1.16"
rayon = "1.11.0"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.6"
toml = "0.9.5"
